# learngit

Mialib/Mialib/: Mialib.pro  Mialib.pro.user.074e9eb  define.h  mialib_global.h
Mialib/Mialib/ABBALib/: ABBALib.h  ABBA_Configuration.c  ABBA_Configuration.h  ABBA_EventMsg.c  ABBA_EventMsg.h  ABBA_Messages.c  ABBA_PanelInfo.c  ABBA_PanelInfo.h  ABBA_Register.c  ABBA_UnitTest.c  GENERIC_defines.h  README.txt
Mialib/Mialib/CloudLib/: CL_ABBAbilityDeviceRegistration.c  CL_ABBAbilitySerialiser.c  CL_ABBAbilitySerialiser.h  CL_ABBAbilityTelemetry.c  CL_DebugSerialiser.c  CL_DebugSerialiser.h  CL_Device.c  CL_Device.h  CL_Error.h  CL_Manager.c  CL_Manager.h  CL_Meas.c  CL_Meas.h  CL_MeasBuff.c  CL_MeasBuff.h  CL_MeasureTypes.h  CL_Parameter.c  CL_Parameter.h  CL_ParameterList.c  CL_ParameterList.h  CL_Serialiser.c  CL_Serialiser.h  CL_String.c  CL_String.h  CL_UnitTest.c  CL_Utils.h
Mialib/Mialib/HAL/: GENERIC_defines.h  GENERIC_defines_conf.h  GENERIC_errno.h  HAL_modem.h  (+2 more)
Mialib/Mialib/cpmPlusEmbeddedSDK/SDK/src/MIA_Driver/: CMakeLists.txt  Mia_Base.cpp  Mia_Base.h  Mia_Base_LINUX.h  Mia_Base_OS.cpp  Mia_Base_QNX.h  Mia_Base_WIN32.h  Mia_Device.cpp  Mia_Device.h  Mia_Driver.cpp  Mia_Driver.h  Mia_DriverBase.cpp  Mia_DriverBase.h  Mia_Equipment.h  Mia_Exception.h  shared_ptr.h
Mialib/Mialib/cpmPlusEmbeddedSDK/SDK/src/MIA_Websocket/: CMakeLists.txt  WS_Error.c  WS_Error.h  WS_Socket.c  WS_Socket.h  WS_Util.c  WS_Util.h  WS_Websocket.h
Mialib/build-Mialib-Desktop_Qt_5_12_3_GCC_64bit-Debug/: Makefile
Mialib/build-Mialib-imx_QT5_10_1-Debug/: .qmake.stash  Makefile
(+200 files in other folders)
